--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <li>
             <figure>
               <img
-                src="images/Photo1.jpg"
+                src="images/photo1.jpg"
                 width="250"
                 height="250"
                 alt="Pierwszy członek zespołu John Doe"
@@ -102,7 +102,7 @@
           <li>
             <figure>
               <img
-                src="images/Photo2.jpg"
+                src="images/photo2.jpg"
                 width="250"
                 height="250"
                 alt="Drugi członek zespołu John Doe"
@@ -117,7 +117,7 @@
           <li>
             <figure>
               <img
-                src="images/Photo3.jpg"
+                src="images/photo3.jpg"
                 width="250"
                 height="250"
                 alt="Trzeci członek zespołu John Doe"
@@ -132,7 +132,7 @@
           <li>
             <figure>
               <img
-                src="images/Photo4.jpg"
+                src="images/photo4.jpg"
                 width="250"
                 height="250"
                 alt="Czwarty członek zespołu John Doe"
